Bug 62054 - Can't use Cmd+A in "Save As..." window on Mac
Summary: Can't use Cmd+A in "Save As..." window on Mac
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta2
Hardware: Other macOS (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: BSA Confirmed:4.2.0.4:OSX target:4.4.0
Keywords:
: 55371 (view as bug list)
Depends on:
Blocks: macOS-UI-polish
  Show dependency treegraph
 
Reported: 2013-03-09 10:53 UTC by CZEpersi
Modified: 2014-09-10 00:32 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Proposed patch (1.12 KB, patch)
2014-08-07 10:25 UTC, Matthew Francis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description CZEpersi 2013-03-09 10:53:41 UTC
Hi!

I am encountering a minor annoyance of the LibreOffice GUI, which I think could be fixed easily

Problem description: 
In all applications on Mac, you can use Cmd+A to select all text in your current active window or dialog. However, in LibreOffice, Cmd+A does not work in "Save as" window, so if you somehow deselected the default filename in this window, you must delete the default filename manually and then start writing the new one. It can be quite annoying, when you need to work with many new files.

Steps to reproduce:
1. Start a new document on LibreOffice
2. Open the "Save as" window
3. Click into the filename column, so the filename gets unselected
3. Try using Cmd+A to select it again
4. Nothing happens... (and that is the bug)
5. Try the same in any other application on Mac to see what should happen when you press Cmd+A.

Current behavior:
Cmd+A doen't do anything in the "Save as" window.

Expected behavior:
I expected that Cmd+A will always select all the text in the active window or dialog.

I know, this is a really marginal thing, but I miss my Cmd+A so much! Thanks.
              
Operating System: Mac OS X
Version: 4.0.0.0.beta2
Comment 1 Jorendc 2013-03-10 00:24:49 UTC
Thanks for reporting!
I can confirm this behavior using Mac OSX 10.8.2 with LibreOffice 4.0.1.2.
Comment 2 V Stuart Foote 2013-03-31 17:13:33 UTC
@CZEpersi,

Understand choosing UI category since it likely affects all LibreOffice components on OSX, but how is this an Accessibility issue?

Removing the ACCESSIBILITY sub-component flag from the subject title.

@Joel, Rainer

In BSA this should probably be left as an "(All other Problems)", but would there be enough need to add a "SELECTION" or "OBJECT SELECTION" subcategory?
Comment 3 CZEpersi 2013-03-31 17:41:31 UTC
@V Stuart Foote:

Hi! To be honest, I was not sure, to which component this bug should belong, so I chose the one that seemed most probable to me. You are welcome to re-assign it. I am new to LibreOffice bug report.

Thanks. I hope it gets fixed some day. It's really annoying:-/
Comment 4 retired 2013-08-20 09:16:29 UTC
Just FYI: Still valid for master build 4.2 2013-08-20 and LO 4.1.1.1.

Rather minor but very annoying bug.
Comment 5 Jorendc 2014-01-29 22:01:17 UTC
*** Bug 55371 has been marked as a duplicate of this bug. ***
Comment 6 retired 2014-01-30 09:47:15 UTC
Confirmed:4.2.0.4:OSX
Comment 7 Matthew Francis 2014-08-07 10:25:28 UTC
Created attachment 104217 [details]
Proposed patch

Solving the problem as stated (with the addition of the also missing "undo" and "redo") is probably as simple as the attached patch, which was inspired by
http://stackoverflow.com/questions/970707/cocoa-keyboard-shortcuts-in-dialog-without-an-edit-menu

However, there is a related issue remaining: With the "Save As" dialog open, the regular LO menus remain in place on the top bar, but if you try to use them it quickly becomes clear that the cake is a lie, and none of the menu items actually do anything (even the ones you would expect to work, like "Select All")

Looking at what other applications do with such modal windows, either a temporary menu set is substituted while the dialog is open, which generally only includes "Edit" -> "Undo", "Cut", "Copy", "Paste", "Delete" and "Select All", or all menus are simply removed until the dialog is dismissed. Fixing this one is beyond my knowledge of Cocoa or the LO codebase
Comment 8 V Stuart Foote 2014-08-07 13:31:03 UTC
@Matthew, *,
(In reply to comment #7)
> Created attachment 104217 [details] [review]
> Proposed patch

Thanks for the proposed patch, I also thought something along those lines would be necessary, see bug 49853#c37. Lets hope one of the OSX versed devs picks it up and pushes it further. MAybe this class of OSX issues can finally be tackled. Tor? Thorsten?
Comment 9 Commit Notification 2014-08-25 10:43:05 UTC
Matthew J. Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0350bcde37edb1f25cca68cb1447ba8f759aea15

fdo#62054 Enable "Select All", "Undo" and "Redo" in "Save as..." on OS X



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 CZEpersi 2014-08-28 12:06:58 UTC
(In reply to comment #9)
> Matthew J. Francis committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=0350bcde37edb1f25cca68cb1447ba8f759aea15
> 
> fdo#62054 Enable "Select All", "Undo" and "Redo" in "Save as..." on OS X
> 
> 
> 
> The patch should be included in the daily builds available at
> http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> http://wiki.documentfoundation.org/Testing_Daily_Builds
> Affected users are encouraged to test the fix and report feedback.

Thanks for the patch! I have tested the master build (Version: 4.4.0.0.alpha0+
Build ID: 80748411462c20d51d80eca63211285036af106c from 28th August 2014) on my MacOS X 10.9.3 and it seems to be working nicely for me. I can‘t wait for the official release.