fdo#62054 Enable "Select All", "Undo" and "Redo" in "Save as..." on OS X

Change-Id: I2051f54b0b031dcab4918c8c187ed434842ffdd4